--- a/El_rincon_Del_Sabor.html
+++ b/El_rincon_Del_Sabor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Rincón Del Sabor</title>
+    <title>index</title>
     <style>
         body {
             background-image: url("fondo.jpg"); /* Cambia por tu imagen */
@@ -48,4 +48,5 @@
     <h1>El Rincón Del Sabor</h1>
     <a href="pagina2.html" class="boton">Entrar al Rincon</a>
 </body>
+
 </html>
