Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: 'Comic Sans MS';
       background: linear-gradient(135deg, #ffe0b2, #f8bbd0, #c5e1a5, #b3e5fc);
       background-size: 400% 400%;
       animation: fondoAnimado 15s ease infinite;
