Enhance Servicios.html with mobile responsive styles
Added responsive styles for mobile screens to improve user experience on smaller devices.

--- a/Servicios.html
+++ b/Servicios.html
@@ -103,6 +103,32 @@
       font-size: 2em;
       font-style: normal;
     }
+    /* Estilos para pantallas pequeñas (celulares) */
+@media (max-width: 600px) {
+  body {
+    font-size: 1em; /* texto más cómodo */
+    line-height: 1.8; /* más espacio entre líneas */
+  }
+
+  .contenedor {
+    margin: 20px; /* más aire a los lados */
+    padding: 20px; /* más espacio interno */
+  }
+
+  nav a {
+    display: block; /* cada botón ocupa toda la línea */
+    margin: 10px auto; /* separados entre sí */
+    width: 80%; /* más grandes y fáciles de tocar */
+  }
+
+  h2, h3 {
+    font-size: 1.4em; /* títulos más legibles */
+  }
+
+  p, ul li {
+    font-size: 1.1em; /* texto un poco más grande */
+  }
+}
   </style>
 </head>
 <body>
