--- a/Servicios.html
+++ b/Servicios.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servicios - El Rincón Del Sabor</title>
-<style>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
     body {
       margin: 0;
-      font-family: 'Comic Sans MS', sans-serif; /* quitamos cursiva */
-      font-style: normal; /* fuerza texto normal */
+      font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #ffe0b2, #f8bbd0, #c5e1a5, #b3e5fc);
       background-size: 400% 400%;
       animation: fondoAnimado 15s ease infinite;
@@ -21,158 +22,186 @@
       100% {background-position: 0% 50%;}
     }
 
-    /* Menú superior */
-    nav {
-      background-color: #6f4e37; /* café */
-      padding: 15px;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+    /* Navbar pastel animada */
+    .navbar {
+      background: linear-gradient(90deg, #ffccbc, #f8bbd0, #c5e1a5, #b3e5fc);
+      background-size: 300% 300%;
+      animation: gradientMove 10s ease infinite;
     }
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
+    .navbar-brand {
       font-weight: bold;
-      padding: 8px 15px;
-      border-radius: 20px;
-      background-color: #ff80ab; /* rosa dona */
-      transition: transform 0.3s ease, background-color 0.3s ease;
-      font-style: normal; /* asegura que los enlaces no sean cursivos */
+      color: #4e342e !important;
     }
 
-    nav a:hover {
-      background-color: #ffb74d; /* glaseado naranja */
+    .nav-link {
+      color: #4e342e !important;
+      font-weight: 500;
+      transition: transform 0.3s ease;
+    }
+
+    .nav-link:hover {
       transform: scale(1.1);
+      color: #6f4e37 !important;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     /* Contenedor principal */
     .contenedor {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 40px auto;
-      padding: 20px;
+      padding: 30px;
       background-color: rgba(255,255,255,0.9);
       border-radius: 20px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.3);
-      font-style: normal; /* asegura texto normal */
     }
 
     h2 {
       color: #6f4e37;
-      border-bottom: 4px dashed #ff80ab; /* estilo glaseado */
+      border-bottom: 4px dashed #ff80ab;
       padding-bottom: 5px;
-      font-style: normal;
+      text-align: center;
     }
 
-    p, ul {
-      font-size: 1.1em;
-      line-height: 1.6;
-      font-style: normal;
+    h3 {
+      color: #4e342e;
+      margin-top: 25px;
+      text-align: center;
     }
 
-    ul li {
-      margin-bottom: 10px;
-      font-size: 1.2em;
-      font-style: normal;
-    }
+   
 
-    /* Botón de regreso */
-    .boton {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: linear-gradient(45deg, #ff80ab, #ffb74d, #81c784);
-      color: white;
-      text-decoration: none;
-      border-radius: 25px;
-      font-weight: bold;
-      transition: transform 0.3s ease;
-      font-style: normal;
-    }
+  
 
-    .boton:hover {
-      transform: scale(1.1);
-    }
-
-    /* Decoración tipo dona/café */
     .decoracion {
       text-align: center;
       margin-bottom: 20px;
       font-size: 2em;
-      font-style: normal;
     }
-    /* Estilos para pantallas pequeñas (celulares) */
-@media (max-width: 600px) {
-  body {
-    font-size: 1em; /* texto más cómodo */
-    line-height: 1.8; /* más espacio entre líneas */
-  }
 
-  .contenedor {
-    margin: 20px; /* más aire a los lados */
-    padding: 20px; /* más espacio interno */
-  }
+    /* Tarjetas de servicios */
+    .card {
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
 
-  nav a {
-    display: block; /* cada botón ocupa toda la línea */
-    margin: 10px auto; /* separados entre sí */
-    width: 80%; /* más grandes y fáciles de tocar */
-  }
+    .card:hover {
+      transform: scale(1.05);
+    }
 
-  h2, h3 {
-    font-size: 1.4em; /* títulos más legibles */
-  }
-
-  p, ul li {
-    font-size: 1.1em; /* texto un poco más grande */
-  }
-}
+    .card-header {
+      background: linear-gradient(45deg, #ff80ab, #ffb74d, #81c784, #64b5f6);
+      color: white;
+      font-weight: bold;
+      text-align: center;
+      border-radius: 15px 15px 0 0;
+    }
   </style>
 </head>
 <body>
-  <!-- Menú -->
-  <!-- Menú -->
-  <nav>
-    <a href="index.html" class="boton">Volver al Inicio</a>
-    <a href="pagina2.html" class="boton">Mision Vision y Valores</a>
-    <a href="Historia.html" class="boton">Nuestra Historia</a>
-    <a href="Servicios.html" class="boton">Servicios</a>
-    <a href="Producto.html" class="boton">Productos</a>
-    <a href="Buyer_Persona.html" class="boton">Buyer Persona</a>
+  <!-- Navbar igual que las demás páginas -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">☕ El Rincón Del Sabor 🍩</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="pagina2.html">Misión y Valores</a></li>
+          <li class="nav-item"><a class="nav-link" href="Historia.html">Historia</a></li>
+          <li class="nav-item"><a class="nav-link" href="Servicios.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="Producto.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="Buyer_Persona.html">Buyer Persona</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
-
 
   <!-- Contenido -->
   <div class="contenedor">
     <div class="decoracion">☕ 🍩 💻</div>
     <h2>Nuestros Servicios: Una Experiencia Diseñada para Ti</h2>
-    <p>
+    <p class="text-center">
       En El Rincón Del Sabor, no solo servimos café; creamos el entorno perfecto para que tu día fluya, 
       ya sea que busques un momento de calma o el impulso necesario para tu jornada laboral.
     </p>
 
-    <h3>Excelencia en Barra y Gastronomía</h3>
-    <p>Nuestra propuesta culinaria se basa en la calidad de los insumos y la maestría en la preparación:</p>
-    <ul>
-      <li><b>Barra de Especialidad:</b> Selección de granos premium preparados mediante métodos tradicionales (Expreso, Capuchino) y técnicas de extracción artesanal (V60, Chemex, Prensa Francesa).</li>
-      <li><b>Bebidas de Autor y Alternativas:</b> Matcha, Chai Latte, chocolates artesanales, infusiones botánicas, además de Frappés y Smoothies frutales.</li>
-      <li><b>Repostería y Panadería Gourmet:</b> Cruasanes, muffins, bagels y sándwiches artesanales, ideales para cualquier hora del día.</li>
-    </ul>
+    <!-- Sección de servicios en tarjetas -->
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">☕ Barra de Especialidad</div>
+          <div class="card-body">
+            <p>Selección de granos premium preparados mediante métodos tradicionales (Expreso, Capuchino) y técnicas de extracción artesanal (V60, Chemex, Prensa Francesa).</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">🍹 Bebidas de Autor</div>
+          <div class="card-body">
+            <p>Matcha, Chai Latte, chocolates artesanales, infusiones botánicas, además de Frappés y Smoothies frutales.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">🥐 Repostería Gourmet</div>
+          <div class="card-body">
+            <p>Cruasanes, muffins, bagels y sándwiches artesanales, ideales para cualquier hora del día.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <h3>💻 Infraestructura para el Profesional Moderno</h3>
-    <ul>
-      <li><b>Conectividad de Alta Velocidad:</b> Wi-Fi simétrico gratuito de fibra óptica para videollamadas y transferencias de datos pesados.</li>
-      <li><b>Workstations Equipadas:</b> Mesas con puntos de carga y estaciones eléctricas para trabajar sin interrupciones.</li>
-      <li><b>Ambiente Productivo:</b> Espacios climatizados con música curada para fomentar concentración y bienestar.</li>
-    </ul>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">🌐 Conectividad</div>
+          <div class="card-body">
+            <p>Wi-Fi simétrico gratuito de fibra óptica para videollamadas y transferencias de datos pesados.</p>
+          </div>
+        </div>
+      </div>
 
-    <h3>El Valor de Nuestro Espacio</h3>
-    <p>
-      Cada rincón de nuestra cafetería ha sido diseñado pensando en el confort. 
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">🔌 Workstations</div>
+          <div class="card-body">
+            <p>Mesas con puntos de carga y estaciones eléctricas para trabajar sin interrupciones.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">🎶 Ambiente Productivo</div>
+          <div class="card-body">
+            <p>Espacios climatizados con música curada para fomentar concentración y bienestar.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h3>✨ El Valor de Nuestro Espacio</h3>
+    <p class="text-center">
+      Cada rincón de nuestra cafetería ha sido diseñado pensando en el confort.  
       La combinación de iluminación cálida, mobiliario ergonómico y decoración vanguardista convierte nuestro local en el tercer espacio ideal: entre tu hogar y tu oficina.
     </p>
   </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
