--- a/pagina2.html
+++ b/pagina2.html
@@ -6,27 +6,76 @@
   <title>Página 2 - El Rincón Del Sabor</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
- <style>
+  <style>
+    /* Fondo radial aplicado al body */
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #ffe0b2, #f8bbd0, #c5e1a5, #b3e5fc);
-      background-size: 400% 400%;
-      animation: fondoAnimado 15s ease infinite;
       color: #4e342e;
-    }
-
-    @keyframes fondoAnimado {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
+      background: radial-gradient(
+          50% 50% at 100% 0,
+          #ca3f3f 0% 5%,
+          #ffffff 6% 15%,
+          #ca3f3f 16% 25%,
+          #ffffff 26% 35%,
+          #ca3f3f 36% 45%,
+          #ffffff 46% 55%,
+          #ca3f3f 56% 65%,
+          #ffffff 66% 75%,
+          #ca3f3f 76% 85%,
+          #ffffff 86% 95%,
+          #0000 96%
+        ),
+        radial-gradient(
+          50% 50% at 0 100%,
+          #ca3f3f 0% 5%,
+          #ffffff 6% 15%,
+          #ca3f3f 16% 25%,
+          #ffffff 26% 35%,
+          #ca3f3f 36% 45%,
+          #ffffff 46% 55%,
+          #ca3f3f 56% 65%,
+          #ffffff 66% 75%,
+          #ca3f3f 76% 85%,
+          #ffffff 86% 95%,
+          #0000 96%
+        ),
+        radial-gradient(
+          50% 50%,
+          #ca3f3f 0% 5%,
+          #ffffff 6% 15%,
+          #ca3f3f 16% 25%,
+          #ffffff 26% 35%,
+          #ca3f3f 36% 45%,
+          #ffffff 46% 55%,
+          #ca3f3f 56% 65%,
+          #ffffff 66% 75%,
+          #ca3f3f 76% 85%,
+          #ffffff 86% 95%,
+          #0000 96%
+        ),
+        radial-gradient(
+          50% 50%,
+          #ca3f3f 0% 5%,
+          #ffffff 6% 15%,
+          #ca3f3f 16% 25%,
+          #ffffff 26% 35%,
+          #ca3f3f 36% 45%,
+          #ffffff 46% 55%,
+          #ca3f3f 56% 65%,
+          #ffffff 66% 75%,
+          #ca3f3f 76% 85%,
+          #ffffff 86% 95%,
+          #0000 96%
+        ) 38px 38px;
+      background-size: 76px 76px;
+      background-color: #ca3f3f;
     }
 
     /* Navbar pastel animada */
     .navbar {
       background: linear-gradient(90deg, #ffccbc, #f8bbd0, #c5e1a5, #b3e5fc);
       background-size: 300% 300%;
-      border-radius: 10px;
       animation: gradientMove 10s ease infinite;
     }
 
@@ -54,9 +103,9 @@
 
     /* Contenedor principal */
     .contenedor {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 40px auto;
-      padding: 25px;
+      padding: 30px;
       background-color: rgba(255,255,255,0.9);
       border-radius: 20px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.3);
@@ -69,16 +118,49 @@
       text-align: center;
     }
 
-    p {
+    h3 {
+      color: #4e342e;
+      margin-top: 25px;
+      text-align: center;
+    }
+
+    p, ul {
       font-size: 1.1em;
       line-height: 1.8;
       text-align: justify;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+      font-size: 1.1em;
     }
 
     .decoracion {
       text-align: center;
       margin-bottom: 20px;
       font-size: 2em;
+    }
+
+    /* Tarjetas de servicios */
+    .card {
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.05);
+    }
+
+    .card-header {
+      background: linear-gradient(45deg, #ff80ab, #ffb74d, #81c784, #64b5f6);
+      background-size: 300% 300%;
+      animation: gradientMove 6s ease infinite;
+      color: white;
+      font-weight: bold;
+      text-align: center;
+      border-radius: 15px 15px 0 0;
     }
   </style>
 </head>
